--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   table_calendar: ^3.1.1
   google_fonts: ^6.2.1
+  firebase_auth: ^4.19.1
+  google_sign_in: ^6.2.1
+  firebase_core: ^2.29.0
 
 dev_dependencies:
   flutter_test:
