--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_core: ^2.29.0
   flutter_dotenv: ^5.1.0
+  cloud_firestore: ^4.16.1
 
 dev_dependencies:
   flutter_test:
