--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
 
   assets:
     - assets/.env
+    - assets/blue_pikmin.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
