--- a/firebase.json
+++ b/firebase.json
@@ -19,7 +19,7 @@
     }
   ],
   "hosting": {
-    "source": ".",
+    "public": "build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
